--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,13 @@ Cargo.lock
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+#
+.vscode/
 
 # Environment Files
 .env
 data/
+
+# Zig stuff
+.zig-cache/
+zig-out/
